refactor: use `toList()` instead of `collect(Collectors.toList())`
The change simplifies the code by leveraging the `toList()` method introduced in Java 16, which is more concise and readable compared to the older `collect(Collectors.toList())` approach.